syntax = "proto3";

package helloworld;

// The greeting service definition.
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayGoodbye (GoodbyeRequest) returns (GoodbyeReply) {}
  rpc GetTime (TimeRequest) returns (TimeReply) {}
  rpc MultiplyNumbers (MultiplyRequest) returns (MultiplyReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message GoodbyeRequest {
  string name = 1;
}

message GoodbyeReply {
  string message = 1;
}

message TimeRequest {
}

message TimeReply {
  string time = 1;
}

message MultiplyRequest {
  int32 number1 = 1;
  int32 number2 = 2;
}

message MultiplyReply {
  int32 result = 1;
}
